Fix .well wrapping in Foundry

--- a/css/common.sass
+++ b/css/common.sass
@@ -77,6 +77,9 @@ footer
 .horiz-columns
   padding-bottom: 1em
 
+.well
+  overflow: hidden
+
 ul.well
   padding-left: 2.8em
 
